# Learn_Agentic_AI

chain_hello - Copy/: .env  hello.py  main.py
chapter_1/: main.py  pyproject.toml
class_1/hello_ag/: pyproject.toml
python_syntax_dataclasses/: syntax.py
stream/: main.py  test1.py
tool_calling/: main.py  test.py
